# hmac-bcrypt

./: .gitignore  LICENSE  README.md
c/: Makefile
c/include/: bcrypt.h  hmac-sha512.h  util.h
c/src/: hmac-bcrypt.h  test.c
csharp/: HMAC_Bcrypt.cs  Program.cs  bcrypt-hmac.sln  hmac-bcrypt.sln  hmac_bcrypt.sln
csharp/bcrypt-hmac/: HMAC.cs  Program.cs  bcrypt-hmac.csproj
csharp/bcrypt-hmac/bcrypt-hmac/: HMAC.cs  Program.cs
csharp/hmac-bcrypt/: HMAC_Bcrypt.cs  Program.cs  hmac-bcrypt.csproj
go/: go.mod  hmacBcrypt.go  hmacBcrypt_test.go  settings.go  settings_test.go
kotlin/: build.gradle.kts  settings.gradle.kts
kotlin/src/commonMain/kotlin/: HMAC_Bcrypt.kt  Radix64.kt
kotlin/src/jvmMain/kotlin/: HMAC_Bcrypt.kt  Main.kt
kotlin/src/jvmTest/kotlin/: Tests.kt
nodejs/: package.json
nodejs/libs/: hmac_bcrypt.js
nodejs/test/: test.js
perl/: HMAC_Bcrypt.pm
perl/lib/: HMAC_Bcrypt.pm
perl/t/: 000-use.t
php/public/: index.php
php/src/: HMAC_Bcrypt.php  Radix64.php
python/: requirements.txt  test.py
python/hmac_bcrypt/: __init__.py  hmac_bcrypt.py  radix64.py
rust/: Cargo.toml
rust/src/: hmac_bcrypt.rs  main.rs
zig/: build.zig
zig/src/: main.zig
