[package]
name = "hmac-bcrypt"
version = "0.1.0"
edition = "2021"
authors = ["singe <hmac-bcrypt@singe.za.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bcrypt = "0.13.0"
getrandom = "0.2.7"
hmac = "0.12.1"
sha2 = "0.10.2"
